Fix: Sometimes canvas overlaps by 1px

--- a/app/stylesheets/index.css
+++ b/app/stylesheets/index.css
@@ -50,7 +50,7 @@ body {
     max-width: 80vh;
     height: 100%;
     margin: 0 auto;
-    color: black;
+    overflow: hidden;
 }
 
 .button {
